--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
                 <h3>Portfolio</h3>
                 <hr>
                 <div class="row footer-portfolio">
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/200/200/?random" class="img-responsive"></div>
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/300/300/?random" class="img-responsive"></div>
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/250/250/?random" class="img-responsive"></div>
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/275/275/?random" class="img-responsive"></div>
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/225/225/?random" class="img-responsive"></div>
-                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="https://unsplash.it/222/222/?random" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="glen-canyon.jpg" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="landscape.jpg" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="leopard.jpg" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="sunset.jpg" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="utah-440520.jpg" class="img-responsive"></div>
+                    <div class="col-md-4 col-sm-6 col-xs-2"><img src="utah.jpg" class="img-responsive"></div>
 
                 </div>
             </div>
